feat(conductor): restrict firm<>soft commitment spread and add celestia search windows (#725)
## Summary
This patch restricts the maximum permitted spread between soft and firm
commitments to 16 heights and adds a search window to celestia heights
within which the next sequencer block must be found.

## Background
As part of the refactor it was found that the loop reading off of
sequencer was too hot, reading more sequencer blocks than could be
executed against the rollup node leading to conductor crashing with out
of memory. To fix this a, the soft-block channel from the sequencer
reader to the executor needed to be changed from an unlimited to a
limited channel.

With this rework it made sense to go all the way and also backpressure
on the celestia reader.

## Changes
- Executor tests if soft commitments are too far ahead of firm
commitments, and stops pulling soft blocks from sequencer-reader until
firm commitments have caught up (currently hard-coded at a difference of
16).
- The above leads to backpressure on sequencer reader, which stops
reading new sequencer heights until the channel is free
- Because the tendermint-rs JSONRPC subscription only allows for reading
full blocks the code is changed to not deserialize raw tx bytes and only
keep sequencer block heights. This is wasteful in network costs but
doesn't put pressure on conductor memory and will hopefully be addressed
with future tendermint-rs (or cometbft-rs) releases.
- The backpressure on the celestia-reader is indirect: it actively
monitors the commitment state reported by executor and only advances the
maximum celestia height that it will read based on the firm commitment
number.

## Testing
Conductor was redeployed several times with different configurations of
`FirmOnly`, `SoftOnly`, and `SoftAndFirm` commitment levels. It was
observed that it always reached the same commitment hash at a
non-trivial height (in this case 1961).

--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -6,13 +6,16 @@ rust-version = "1.73"
 
 [dependencies]
 async-trait = "0.1.73"
-pin-project-lite = "0.2"
-
-base64 = { workspace = true }
-eyre = { workspace = true }
+futures-bounded = "0.2.3"
 deadpool = { version = "0.10.0", default-features = false, features = [
   "managed",
 ] }
+eyre = { workspace = true }
+http = "1.0.0"
+pin-project-lite = "0.2"
+tracing-futures = { version = "0.2.5", features = ["futures-03"] }
+
+base64 = { workspace = true }
 ed25519-consensus = { workspace = true }
 ethers = { workspace = true, features = ["optimism", "ws"] }
 futures = { workspace = true }
@@ -22,7 +25,7 @@ prost = { workspace = true }
 prost-types = { workspace = true }
 rand = { workspace = true }
 reqwest = { workspace = true, features = ["json"] }
-serde = { workspace = true }
+serde = { workspace = true, features = ["derive"] }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
 tendermint = { workspace = true }
@@ -31,10 +34,10 @@ thiserror = { workspace = true }
 tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal"] }
 tokio-util = { workspace = true, features = ["rt"] }
 tonic = { workspace = true }
-tracing = { workspace = true }
+tracing = { workspace = true, features = ["valuable"] }
 tryhard = { workspace = true }
 
-astria-core = { path = "../astria-core", features = ["client"] }
+astria-core = { path = "../astria-core", features = ["client", "serde"] }
 celestia-client = { package = "astria-celestia-client", path = "../astria-celestia-client" }
 optimism = { package = "astria-optimism", path = "../astria-optimism" }
 config = { package = "astria-config", path = "../astria-config" }
@@ -45,8 +48,6 @@ sequencer-client = { package = "astria-sequencer-client", path = "../astria-sequ
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry", features = [
   "display",
 ] }
-http = "1.0.0"
-tracing-futures = { version = "0.2.5", features = ["futures-03"] }
 
 [dev-dependencies]
 jsonrpsee = { workspace = true, features = ["server"] }
