--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -31,17 +31,17 @@ jobs:
           version: "1.15.1"
           github_token: ${{ github.token }}
       - uses: bufbuild/buf-lint-action@v1
-      - run: buf format proto -d --exit-code
+      - run: buf format -d --exit-code
       # Run breaking changes against each module, running against whole workspace
       # fails if new packages are added
       - uses: bufbuild/buf-breaking-action@v1
         with:
           input: "proto/executionapis"
-          against: "buf.build/astria/executionapis"
+          against: "buf.build/astria/execution-apis"
       - uses: bufbuild/buf-breaking-action@v1
         with:
           input: "proto/sequencerapis"
-          against: "buf.build/astria/sequencerapis"
+          against: "buf.build/astria/astria"
 
   rust:
     runs-on: ubuntu-22.04
