chore: build all binaries, fix pr title ci (#728)
## Summary
Builds binaries for all of our releases, and makes it such pr title
check runs on pr edit.

## Background
We added binary builds for the cli, but we don't have prebuilt binaries
for our other services.

## Changes
- adds binary builds for conductor, composer, sequencer, and
sequencer-relayer
- moves the conventional commit checker to admin so it will run on pr
edit

## Testing
Manual workflow triggers on this PR.

--- a/.github/workflows/admin.yml
+++ b/.github/workflows/admin.yml
@@ -15,3 +15,21 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@v4
+
+  pr_title:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'pull_request'
+    steps:
+      - uses: actions/checkout@v3
+      - uses: CondeNast/conventional-pull-request-action@v0.2.0
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          ignoreCommits: "true"
+
+  admin:
+    if: ${{ always() && !cancelled() }}
+    needs: [pr_title]
+    uses: ./.github/workflows/reusable-success.yml
+    with:
+      success: ${{ !contains(needs.*.result, 'failure') }}
