--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -9,17 +9,6 @@ jobs:
   run_checker:
     uses: ./.github/workflows/reusable-run-checker.yml
 
-  pr_title:
-    runs-on: ubuntu-latest
-    if: github.event_name == 'pull_request'
-    steps:
-      - uses: actions/checkout@v3
-      - uses: CondeNast/conventional-pull-request-action@v0.2.0
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          ignoreCommits: "true"
-
   proto:
     runs-on: ubuntu-latest
     needs: run_checker
@@ -82,7 +71,7 @@ jobs:
             #.github
 
   lint:
-    needs: [proto, rust, toml, markdown, pr_title]
+    needs: [proto, rust, toml, markdown]
     if: ${{ always() && !cancelled() }}
     uses: ./.github/workflows/reusable-success.yml
     with:
