--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.3.1"
 edition = "2021"
 rust-version = "1.70.0"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bin]]
+name = "astria-composer"
 
 [dependencies]
 astria-core = { path = "../astria-core" }
