--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.11.1"
 edition = "2021"
 rust-version = "1.73"
 
+[[bin]]
+name = "astria-conductor"
+
 [dependencies]
 async-trait = "0.1.73"
 deadpool = { version = "0.10.0", default-features = false, features = [
