feat: add pretty-printing to stdout

--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -38,6 +38,17 @@ ASTRIA_CONDUCTOR_NO_OTEL=false
 # If false span data is written to stdout only if it is connected to a tty.
 ASTRIA_CONDUCTOR_FORCE_STDOUT=false
 
+# If true uses an exceedingly pretty human readable format to write to stdout.
+# If false uses JSON formatted OTEL traces.
+# This does nothing unless stdout is connected to a tty or
+# `ASTRIA_CONDUCTOR_FORCE_STDOUT` is set to `true`.
+ASTRIA_CONDUCTOR_PRETTY_PRINT=false
+
+# If set to any non-empty value removes ANSI escape characters from the pretty
+# printed output. Note that this does nothing unless `ASTRIA_CONDUCTOR_PRETTY_PRINT`
+# is set to `true`.
+NO_COLOR=
+
 # The URL to a fully trusted CometBFT/Sequencer to issue cometbft RPCs. Example
 # RPCs are subscribing to new blocks, fetching blocks at a given level, or
 # retrieving validators.
@@ -71,7 +82,7 @@ OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4317"
 # Sets the OTLP endpoint for trace data. This takes precedence over `OTEL_EXPORTER_OTLP_ENDPOINT` if set.
 OTEL_EXPORTER_OTLP_TRACES_ENDPOINT="http://localhost:4317/v1/traces"
 # The duration in seconds that the OTEL exporter will wait for each batch export.
-OTEL_EXPORTER_OTLP_TRACES_TIMEOUT=10,
+OTEL_EXPORTER_OTLP_TRACES_TIMEOUT=10
 # The compression format to use for exporting. Only `"gzip"` is supported.
 # Don't set the env var if no compression is required.
 OTEL_EXPORTER_OTLP_TRACES_COMPRESSION="gzip"
