--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -60,6 +60,12 @@ ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
 # Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
 ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_L1_BLOCK_HEIGHT=1
 
+# Set to true to enable prometheus metrics.
+ASTRIA_CONDUCTOR_METRICS_ENABLED=false
+
+# The address at which the prometheus HTTP listener will bind if enabled.
+ASTRIA_CONDUCTOR_PROMETHEUS_HTTP_LISTENER_ADDR="127.0.0.1:9000"
+
 # Sets the general OTLP endpoint.
 OTEL_EXPORTER_OTLP_ENDPOINT="http://localhost:4317"
 # Sets the OTLP endpoint for trace data. This takes precedence over `OTEL_EXPORTER_OTLP_ENDPOINT` if set.
