chore: split protos into multiple buf repos (#732)
## Summary
Breaks out the execution api protos into seperate BUF image/package.
This is done without any changes to local types, and maintains the same
buf repo for core astria sequencer types on buf.

## Background
Importing modules via BUF for execution API currently pulls in
everything and the kitchen sync. Notably this includes penumbra &
cometbft types which can create type collisions. Execution API doesn't
need these, is fully independent so breaking out into it's own module is
clean.

## Changes
- Split execution API out
- Vendor penumbra & minimal set of cosmos types

## Testing
CI tests, locally running `buf lint` and `buf breaking` to confirm
workspace updates work.

## Breaking Changelist
- Dependent code on execution api using buf build will have to update
their module imports for any new updates.

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -20,13 +20,16 @@ jobs:
           version: "1.15.1"
           github_token: ${{ github.token }}
       - uses: bufbuild/buf-lint-action@v1
-        with:
-          input: "proto/"
-      - run: buf format proto -d --exit-code
+      - run: buf format -d --exit-code
+      # Run breaking changes against each module, running against whole workspace
+      # fails if new packages are added
       - uses: bufbuild/buf-breaking-action@v1
         with:
-          # The 'main' branch of the GitHub repository that defines the module.
-          input: "proto"
+          input: "proto/executionapis"
+          against: "buf.build/astria/execution-apis"
+      - uses: bufbuild/buf-breaking-action@v1
+        with:
+          input: "proto/sequencerapis"
           against: "buf.build/astria/astria"
 
   rust:
