--- a/crates/astria-composer/local.env.example
+++ b/crates/astria-composer/local.env.example
@@ -9,7 +9,8 @@ ASTRIA_COMPOSER_SEQUENCER_URL="http://127.0.0.1:26657"
 
 # A list of execution <chain_id_1>::<rpc_server_1>,<chain_id_2>::<rpc_server_2>.
 # Chain IDs are not case sensitive. If an ID is repeated, the last list item is used.
-ASTRIA_COMPOSER_ROLLUPS="astriachain::ws://127.0.0.1:8545"
+# ASTRIA_COMPOSER_ROLLUPS="astriachain::ws://127.0.0.1:8545"
+ASTRIA_COMPOSER_ROLLUPS="astriachain::ws://127.0.0.1:8546"
 
 # Private key for the sequencer account used for signing transactions
 # Must be a hex-encoded 32-byte array (64-character hex string)
