--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,6 +66,7 @@ once_cell = "1.17.1"
 sha2 = "0.10"
 serde = "1"
 serde_json = "1"
+# TODO (https://github.com/astriaorg/astria/issues/748): Update when dependencies don't clash
 metrics = "0.19.0"
 # Note that when updating the penumbra versions, vendored types in `proto/sequencerapis/astria_vendored` may need to be updated as well.
 penumbra-ibc = { git = "https://github.com/penumbra-zone/penumbra.git", tag = "v0.66.0", default-features = false }
