--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -9,6 +9,8 @@ rust-version = "1.70.0"
 [dependencies]
 base64 = { workspace = true, optional = true }
 
+# TODO (https://github.com/astriaorg/astria/issues/748): Update when dependencies don't clash
+metrics-exporter-prometheus = "0.10.0"
 # When updating ensure that `opentelemetry-semantic-conventions` matches
 # that used by `opentelemetry-otlp`.
 opentelemetry = "0.21.0"
