chore: add some information to crates update msrv

--- a/crates/astria-celestia-client/Cargo.toml
+++ b/crates/astria-celestia-client/Cargo.toml
@@ -4,6 +4,10 @@ description = "an extension of eigerco's celestia client with astria specific pi
 version = "0.1.0"
 edition = "2021"
 rust-version = "1.73"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 [dependencies]
