--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -2,7 +2,8 @@
 name = "astria-core"
 version = "0.1.0"
 edition = "2021"
-license = "Apache-2.0"
+rust-version = "1.73"
+license = "MIT OR Apache-2.0"
 readme = "README.md"
 repository = "https://github.com/astriaorg/astria"
 homepage = "https://astria.org"
