--- a/crates/astria-optimism/Cargo.toml
+++ b/crates/astria-optimism/Cargo.toml
@@ -2,6 +2,11 @@
 name = "astria-optimism"
 version = "0.1.0"
 edition = "2021"
+license = "MIT OR Apache-2.0"
+rust-version = "1.73"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 [dependencies]
 ethers = { workspace = true, features = ["optimism", "ethers-solc", "ws"] }
