fix(ci): fixes docker builds

--- a/.github/workflows/reusable-run-checker.yml
+++ b/.github/workflows/reusable-run-checker.yml
@@ -61,6 +61,7 @@ jobs:
               - '.github/workflows/reusable-docker-build.yml'
               - 'containerfiles/**'
               - '.dockerignore'
+              - 'Cargo.lock'
             lint_workflow:
               - '.github/workflows/lint.yml'
             crates:
