fix(ci): fixes docker builds (#756)
## Summary
Updates docker builds to run anytime cargo.lock changes to ensure new
dependencies and linkages don't break docker, and fixes current issue
with docker builds by disabling unused feature in prometheus exporter.

## Background
Docker builds are broken in main, due to a deeply nested openssl
dependency.

## Changes
- Only use required features of prometheus exporter
- Update to run docker builds during PR anytime Cargo.lock changes.

## Testing
Docker build CI

--- a/crates/astria-telemetry/Cargo.toml
+++ b/crates/astria-telemetry/Cargo.toml
@@ -9,7 +9,9 @@ rust-version = "1.70.0"
 [dependencies]
 base64 = { workspace = true, optional = true }
 
-metrics-exporter-prometheus = "0.13.1"
+metrics-exporter-prometheus = { version = "0.13.1", default-features = false, features = [
+  "http-listener",
+] }
 # When updating ensure that `opentelemetry-semantic-conventions` matches
 # that used by `opentelemetry-otlp`.
 opentelemetry = "0.21.0"
