--- a/crates/astria-cli/Cargo.toml
+++ b/crates/astria-cli/Cargo.toml
@@ -2,7 +2,11 @@
 name = "astria-cli"
 version = "0.3.1"
 edition = "2021"
-rust-version = "1.73"
+rust-version = "1.74.1"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 [[bin]]
 name = "astria-cli"
