--- a/crates/astria-merkle/Cargo.toml
+++ b/crates/astria-merkle/Cargo.toml
@@ -2,7 +2,10 @@
 name = "astria-merkle"
 version = "0.1.0"
 edition = "2021"
-rust-version = "1.59.0"
+rust-version = "1.71.1"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
