--- a/crates/astria-test-utils/Cargo.toml
+++ b/crates/astria-test-utils/Cargo.toml
@@ -2,6 +2,11 @@
 name = "astria-test-utils"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.71.1"
+license = "MIT OR Apache-2.0"
+readme = "README.md"
+repository = "https://github.com/astriaorg/astria"
+homepage = "https://astria.org"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
