--- a/crates/astria-composer/Cargo.toml
+++ b/crates/astria-composer/Cargo.toml
@@ -12,6 +12,7 @@ homepage = "https://astria.org"
 name = "astria-composer"
 
 [dependencies]
+astria-build-info = { path = "../astria-build-info", features = ["runtime"] }
 astria-core = { path = "../astria-core" }
 config = { package = "astria-config", path = "../astria-config" }
 telemetry = { package = "astria-telemetry", path = "../astria-telemetry" }
@@ -65,3 +66,6 @@ tokio-test = { workspace = true }
 
 tendermint-rpc = { workspace = true }
 wiremock = { workspace = true }
+
+[build-dependencies]
+astria-build-info = { path = "../astria-build-info", features = ["build"] }
