--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -3,6 +3,12 @@ name: Docker
 # Trigger on pushes to master branch, new semantic version tags, and pull request updates
 on:
   workflow_dispatch:
+    inputs:
+      ref:
+        description: |
+          Fully qualified git ref which will be checked out and built. Defaults to using the branch workflow is run on.
+          Example: refs/tags/sequencer-v0.8.0 will then only build sequencer code at that tag.
+        required: false
   push:
     branches:
       - "main"
@@ -32,6 +38,7 @@ jobs:
     with:
       package-name: composer
       target-binary: astria-composer
+      git-ref: ${{ inputs.ref || github.ref }}
     secrets: inherit
 
   conductor:
@@ -41,6 +48,7 @@ jobs:
     with:
       package-name: conductor
       target-binary: astria-conductor
+      git-ref: ${{ inputs.ref || github.ref }}
     secrets: inherit
 
   sequencer:
@@ -50,6 +58,7 @@ jobs:
     with:
       package-name: sequencer
       target-binary: astria-sequencer
+      git-ref: ${{ inputs.ref || github.ref }}
     secrets: inherit
 
   sequencer-relayer:
@@ -59,6 +68,7 @@ jobs:
     with:
       package-name: sequencer-relayer
       target-binary: astria-sequencer-relayer
+      git-ref: ${{ inputs.ref || github.ref }}
     secrets: inherit
 
   docker:
