--- a/scripts/local-bin-mprocs.yaml
+++ b/scripts/local-bin-mprocs.yaml
@@ -3,26 +3,25 @@ procs:
   Cometbft:
     # TODO: need more sophisticated command to wait for sequencer to finish
     # compiling. Is there a way to check if sequencer is running and wait till it is?
-    shell: "sleep 2 && just crates/astria-sequencer/run-cometbft"
+    shell: "sleep 1 && just run-cometbft"
     stop:
       send-keys:
         - "<C-c>"
 
   Sequencer:
-    shell: "just crates/astria-sequencer/copy-env && just crates/astria-sequencer/run"
+    shell: "./bin/astria-sequencer/astria-sequencer"
     stop:
       send-keys:
         - "<C-c>"
 
-  # Composer:
-  #   shell: "sleep 5 && just crates/astria-composer/copy-env && just crates/astria-composer/run"
-  #   stop:
-  #     send-keys:
-  #       - "<C-c>"
+  Composer:
+    shell: "sleep 2 && ./bin/astria-composer/astria-composer"
+    stop:
+      send-keys:
+        - "<C-c>"
 
-  # Conductor:
-  #   # TODO: add wait command for rollup/geth
-  #   shell: "sleep 5 && just crates/astria-conductor/copy-env && just crates/astria-conductor/run"
-  #   stop:
-  #     send-keys:
-  #       - "<C-c>"
+  Conductor:
+    shell: "sleep 2 && ./bin/astria-conductor/astria-conductor"
+    stop:
+      send-keys:
+        - "<C-c>"
