--- a/crates/astria-eyre/Cargo.toml
+++ b/crates/astria-eyre/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-eyre = { workspace = true }
+eyre = "0.6"
 itoa = "1.0.10"
 
 [dev-dependencies]
