Revert "run the binaries instead of using cargo run"
This reverts commit 88283aabc512a0355deafeeba05560d85972bd59.

--- a/crates/astria-conductor/justfile
+++ b/crates/astria-conductor/justfile
@@ -9,7 +9,7 @@ copy-env TYPE=default_env:
   cp {{ TYPE }}.env.example .env
 
 run:
-  ../../target/debug/astria-conductor
+  cargo run
 
 test:
   cargo test -- --nocapture --color always
