--- a/crates/astria-conductor/justfile
+++ b/crates/astria-conductor/justfile
@@ -11,5 +11,8 @@ copy-env TYPE=default_env:
 run:
   cargo run
 
+bin-run:
+    ../../target/debug/astria-conductor
+
 test:
   cargo test -- --nocapture --color always
