--- a/local-tooling/bin-run-built-mprocs.yaml
+++ b/local-tooling/bin-run-built-mprocs.yaml
@@ -3,13 +3,13 @@ procs:
   Cometbft:
     # TODO: need more sophisticated command to wait for sequencer to finish
     # compiling. Is there a way to check if sequencer is running and wait till it is?
-    shell: "sleep 2 && just run-cometbft"
+    shell: "sleep 2 && just _run-cometbft"
     stop:
       send-keys:
         - "<C-c>"
 
   Sequencer:
-    shell: "just ../target/debug/astria-sequencer"
+    shell: "../target/debug/astria-sequencer"
     stop:
       send-keys:
         - "<C-c>"
