--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ members = [
   "crates/astria-conductor",
   "crates/astria-config",
   "crates/astria-core",
+  "crates/astria-eyre",
   "crates/astria-merkle",
   "crates/astria-optimism",
   "crates/astria-sequencer",
@@ -53,10 +54,8 @@ base64 = "0.21"
 base64-serde = "0.7.0"
 bytes = "1"
 clap = "4"
-color-eyre = "0.6"
 ed25519-consensus = "2.1.0"
 ethers = "2.0.11"
-eyre = "0.6"
 futures = "0.3"
 hex = "0.4"
 hex-literal = "0.4.1"
