make core unit tests pass without feature flag

--- a/crates/astria-core/Cargo.toml
+++ b/crates/astria-core/Cargo.toml
@@ -45,6 +45,7 @@ server = ["dep:tonic"]
 test-utils = ["dep:rand"]
 
 [dev-dependencies]
+rand = { workspace = true }
 tonic-build = "0.10"
 walkdir = "2.4.0"
 
