--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -7,16 +7,13 @@
 # on the host running the celestia node.
 ASTRIA_CONDUCTOR_CELESTIA_BEARER_TOKEN="<JWT Bearer token>"
 
-# The URL of the celestia node used to subscribe to new headers and fetch
-# blocks from. Note that this string need not be a fully qualified URL and
-# can miss the scheme part. The scheme part, if present, will be replaced by
-# `ws:` or `http:` for websocket subscriptions and http GET requests,
-# respectively. The following are examples of accepted strings (26658 is
-# the default port of a celestia node to listen for RPCs).
-# - 127.0.0.1:26658
-# - ws://127.0.0.1:26658
-# - http://127.0.0.1:26658
-ASTRIA_CONDUCTOR_CELESTIA_NODE_URL="127.0.0.1:26658"
+# The URL of the celestia node to fetch blocks from. This URL must contain
+# either http or https as scheme.
+ASTRIA_CONDUCTOR_CELESTIA_NODE_HTTP_URL="http://127.0.0.1:26658"
+
+# The URL of the celestia node to subscribe to new network headers. This URL must contain
+# either ws or wss as scheme.
+ASTRIA_CONDUCTOR_CELESTIA_NODE_WEBSOCKET_URL="ws://127.0.0.1:26658"
 
 # Execution RPC URL
 ASTRIA_CONDUCTOR_EXECUTION_RPC_URL="http://127.0.0.1:50051"
