--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ members = [
   "crates/astria-core",
   "crates/astria-eyre",
   "crates/astria-merkle",
+  "crates/astria-optimism",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
@@ -32,6 +33,7 @@ default-members = [
   "crates/astria-config",
   "crates/astria-core",
   "crates/astria-merkle",
+  "crates/astria-optimism",
   "crates/astria-sequencer",
   "crates/astria-sequencer-client",
   "crates/astria-sequencer-relayer",
