--- a/crates/astria-conductor/local.env.example
+++ b/crates/astria-conductor/local.env.example
@@ -55,6 +55,22 @@ NO_COLOR=
 # 127.0.0.1:26657 is the default socket address in comebft's `rpc.laddr` setting.
 ASTRIA_CONDUCTOR_SEQUENCER_URL="ws://127.0.0.1:26657/websocket"
 
+# set to true to enable op-stack deposit derivations
+ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=false
+
+# Websocket URL of Ethereum L1 node.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
+ASTRIA_CONDUCTOR_ETHEREUM_L1_URL="ws://127.0.0.1:8545",
+
+# Contract address of the OptimismPortal contract on L1.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
+ASTRIA_CONDUCTOR_OPTIMISM_PORTAL_CONTRACT_ADDRESS=""
+
+# The block height of the Ethereum L1 chain that the
+# OptimismPortal contract was deployed at.
+# Only used if `ASTRIA_CONDUCTOR_ENABLE_OPTIMISM=true`.
+ASTRIA_CONDUCTOR_INITIAL_ETHEREUM_L1_BLOCK_HEIGHT=1
+
 # Set to true to enable prometheus metrics.
 ASTRIA_CONDUCTOR_NO_METRICS=true
 
