--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ hex-literal = "0.4.1"
 humantime = "2.1.0"
 hyper = "0.14"
 ibc-types = "0.12"
+itoa = "1.0.10"
 jsonrpsee = { version = "0.20" }
 once_cell = "1.17.1"
 sha2 = "0.10"
