--- a/crates/astria-conductor/Cargo.toml
+++ b/crates/astria-conductor/Cargo.toml
@@ -26,6 +26,7 @@ ed25519-consensus = { workspace = true }
 futures = { workspace = true }
 hex = { workspace = true }
 humantime = { workspace = true }
+indexmap = { workspace = true }
 itoa = { workspace = true }
 prost = { workspace = true }
 prost-types = { workspace = true }
